# Lead-mining-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule.db  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260703_17ff621b4ad1_export_job_scope_target.py  20260703_f030b9e1c677_baseline.py
backend/app/: config.py  constants.py  db.py  deps.py  main.py
backend/app/adapters/: _cache.py  _http.py  base.py  context.py  registry.py
backend/app/api/: __init__.py  audit.py  auth.py  bounces.py  campaigns.py  companies.py  contacts.py  dashboard.py  events.py  exports.py  health.py  integrations.py  jobs.py  router.py  settings.py  sheets.py  sources.py  suppressions.py  taxonomy.py  templates.py  users.py  validation.py
backend/app/crawler/: __init__.py  extract.py  fetcher.py  frontier.py  robots.py  url_hygiene.py
backend/app/models/: __init__.py  _shared.py  audit.py  campaign.py  company.py  contact.py  export.py  integration.py  job.py  sales.py  settings_models.py  sheets.py  tenant.py
backend/app/outreach/: __init__.py  bounce_parser.py  renderer.py  reply_monitor.py  scheduler.py  sender.py  suppression.py
backend/app/pipeline/: __init__.py  dedupe.py  orchestrator.py  runtime.py  sales_ready.py  stages.py  validation.py
backend/app/schemas/: __init__.py  auth.py  campaign.py  company.py  contact.py  job.py  settings.py
backend/app/security/: auth.py  crypto.py  rbac.py
backend/app/seeds/: demo.py  generate.py
backend/app/services/: __init__.py  credentials.py  envfile.py  events.py  exportsvc.py
backend/app/sheetsync/: __init__.py  client.py  engine.py  factory.py  tabs.py
backend/app/workers/: __init__.py  celery_app.py  rate_limit.py
backend/scripts/: __init__.py  cleanup_mock_directories.py  seed_demo.py  verify_demo.py
backend/tests/: __init__.py
backend/tests/fixtures/: geocode_ahmedabad.json  places_searchtext.json  places_searchtext_page2.json  rocketreach_person_lookup.json  (+3 more)
(+243 files in other folders)
