[project]
name = "leadmine-backend"
version = "0.1.0"
description = "LeadMine AI — lead mining, enrichment, validation, Sheets sync, and outreach automation backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "celery[redis]>=5.5",
    "redis>=5.2",
    "httpx[http2]>=0.28",
    "tenacity>=9.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "protego>=0.3",
    "email-validator>=2.2",
    "dnspython>=2.7",
    "disposable-email-domains>=0.0.100",
    "phonenumbers>=8.13",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "cryptography>=43.0",
    "pyjwt>=2.10",
    "sse-starlette>=2.1",
    "structlog>=24.4",
    "openpyxl>=3.1",
    "uuid-utils>=0.9",
    "python-multipart>=0.0.12",
    "tldextract>=5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "playwright>=1.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Celery workers must use the sync engine — asyncpg sessions in tasks deadlock.
"app.db.async_session_factory".msg = "Workers must use sync_session_factory, not the async engine."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that hit real external APIs (never run in CI)",
    "integration: tests requiring postgres+redis",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
